--- a/composer.json
+++ b/composer.json
@@ -1,20 +1,8 @@
 {
     "name": "thpglobal/classes",
-    "description": "new version of page classes",
+    "description": "THP app classes",
     "type": "library",
-    "authors": [
-        {
-            "name": "John Coonrod",
-            "email": "jc@thp.org"
-        }
-    ],
+    "license": "MIT",
     "minimum-stability": "stable",
-    "require": {
-        "php": ">=5.3.0"
-    },
-    "autoload": {
-      "psr-0": {
-        "Thpglobal": "src/"
-        }
-    }
+    "require": {}
 }
