--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,11 @@
 {
     "name": "thpglobal/classes",
     "description": "THP app classes",
-    "version": "1.0.1",
     "type": "library",
     "license": "MIT",
     "autoload": {
         "psr-4": {
-            "thpglobal\\classes\\": "src/"
+            "Thpglobal\\Classes\\": "src"
         }
     },
     "authors": [
@@ -15,7 +14,5 @@
             "email": "jc@thp.org"
         }
     ],
-    "minimum-stability": "dev",
-    "prefer-stable": true,
     "require": {}
 }
